# zk-sgx-attester

./: .gitmodules  Cargo.toml  Dockerfile  README.md  deployment-guide.md  local-development.md  remappings.txt
apps/: Cargo.toml
apps/src/: bonsai_prover.rs  lib.rs  local_prover.rs
contracts/: DcapVerifier.sol
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: dcap.rs  error.rs  main.rs
methods/guest/src/dcap/: constants.rs  quote.rs  utils.rs
methods/src/: lib.rs
primitive-io/: Cargo.toml
primitive-io/src/: lib.rs
res/: dcap-verifier.elf
script/: Deploy.s.sol  config.toml
tests/: DcapVerifier.t.sol
