[workspace]
resolver = "2"
members = ["apps", "methods", "primitive-io", "methods/guest"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy = { version = "0.3", features = ["full"] }
alloy-primitives = { version = "0.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bonsai-sdk = { version = "0.6.1" }
bytemuck = { version = "1.14" }
ethers = { version = "2.0" }
hex = { version = "0.4" }
log = { version = "0.4" }
methods = { path = "./methods" }
risc0-build = { version = "1.1", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-zkvm = { version = "1.1", default-features = false, features = ["client"] }
risc0-zkp = { version = "1.1", default-features = false }
risc0-groth16 = { version = "1.1", default-features = false }
risc0-circuit-recursion = { version = "1.1", default-features = false }
risc0-zkvm-platform = { version = "1.1" }
serde = { version = "1.0", features = ["derive", "std"] }

[profile.release]
debug = 1
lto = true

[patch.crates-io]
ring = { git = "https://github.com/tolak/ring.git", branch = "patch-for-risc0" }