[package]
name = "guests"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "dcap-verifier"
path = "src/main.rs"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }

primitive-io = { path = "../../primitive-io" }

serde = { version = "1.0.197", default-features = false, features = ["alloc", "derive", "std"] }
serde_bytes = "0.11"
bincode = "1.3.3"
# serde_json = { version = "1.0.107", default-features = false, features = ["alloc"] }
pink-json = { version = "0.4", default-features = false, features = ["std"] } # serde_json isn't determinism
scale-codec = { version = "3.6.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
base64 = { version = "0.22.0", default-features = false, features = ["alloc"] }
byteorder = { version = "1.5.0", default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "serde"] }

anyhow = { version = "1.0.79", default-features = false }
thiserror = "1.0.50"
log = { version = "0.4" }

asn1_der = { version = "0.7", default-features = false, features = [
    "native_types",
    "std",
] }
ring = { version = "0.17.8", default-features = false, features = ["std"] }
const-oid = { version = "0.9.5", default-features = false, features = ["std"] }
der = { version = "0.7.8", default-features = false, features = ["std"] }
pem = { version = "3", default-features = false, features = ["std"] }
x509-cert = { version = "0.2.4", default-features = false }
# Release version no-std has bug
webpki = { package = "rustls-webpki", version = "=0.102.6", default-features = false, features = ["alloc", "ring", "std"] }

[profile.release]
lto = "thin"
